# datafusion_app

./: Cargo.toml  README.md  sample_data.csv
src/: cli.rs  errors.rs  main.rs  processing.rs  tests.rs  utils.rs
