[package]
name = "mdata_app"
version = "0.1.0"
edition = "2021"

[profile.release]
strip=true
opt-level = "s"

[dependencies]
clap = { version = "3",  features = ["derive"] }
thiserror = "1"
datafusion = "42.1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
env_logger = "0.9.0"

[dev-dependencies]
fake = { version = "2.4", features=['derive']}
tempfile = "3.3.0"
rand = "0.8"
assert_cmd = "2"